--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "arif-rh/ci4-themes",
+	"name": "stietotalwin/arif-rh-ci4-themes-extended",
 	"description": "Theme management for CodeIgniter 4",
 	"keywords": [
 		"codeigniter",
@@ -14,6 +14,12 @@
 			"name": "Arif RH",
 			"email": "arifrahmanhakim.net@gmail.com",
 			"homepage": "https://github.com/arif-rh",
+			"role": "Developer"
+		},
+		{
+			"name": "Stie Total Win",
+			"email": "stietotalwin@gmail.com",
+			"homepage": "https://stietotalwin.com",
 			"role": "Developer"
 		}
 	],
